--- a/mystyle.css
+++ b/mystyle.css
@@ -119,7 +119,7 @@ h1 {
 	text-align: right;
 	border: 1px solid black;
 	margin: 0px; 
-	width: 100%;
+	width: 120px;
 	height: 50px;
 	padding-right: 20px;
 	float: right;
