--- a/mystyle.css
+++ b/mystyle.css
@@ -22,12 +22,11 @@ header {
 h1 {
 	font-weight: bold;
 	background-color: lightgrey;
-	text-align: right;
+	text-align: center;
 	border: 1px solid black;
 	margin: 0px; 
-	width: 120px;
+	width: 150px;
 	height: 50px;
-	padding-right: 20px;
 	float: right;
 }
 .beef-menu, .chicken-menu, .sushi-menu {
