--- a/mystyle.css
+++ b/mystyle.css
@@ -61,12 +61,11 @@ header {
 h1 {
 	font-weight: bold;
 	background-color: lightgrey;
-	text-align: right;
+	text-align: center;
 	border: 1px solid black;
 	margin: 0px; 
-	width: 120px;
+	width: 170px;
 	height: 50px;
-	padding-right: 20px;
 	float: right;
 }
 
@@ -115,12 +114,11 @@ header {
 h1 {
 	font-weight: bold;
 	background-color: lightgrey;
-	text-align: right;
+	text-align: center;
 	border: 1px solid black;
 	margin: 0px; 
-	width: 120px;
+	width: 170px;
 	height: 50px;
-	padding-right: 20px;
 	float: right;
 }
 .flex-container {
